# simple_ram_fs

./: CMakeLists.txt  README.md  ramfs.conf
build_vscode/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build_vscode/.cmake/api/v1/reply/: cache-v2-5415f6dc87227f24e7fd.json  cache-v2-8e3a4bf52c3ca4859a99.json  cmakeFiles-v1-34d332869097fb40a63e.json  cmakeFiles-v1-66aa0ad1f87ac7f98575.json  codemodel-v2-8ef5d4ae2ea54c4a1325.json  codemodel-v2-90bea7a3752ca6d5de51.json  codemodel-v2-cf6915b0ee6c64e90439.json  codemodel-v2-f630b3e41465688461d8.json  index-2022-12-06T04-06-24-0795.json  index-2022-12-06T05-05-04-0346.json  index-2022-12-06T11-25-33-0421.json  index-2022-12-06T14-03-50-0512.json  index-2022-12-07T10-25-00-0666.json  target-ramfs-Debug-2908f4a81d66cb9ce056.json  target-ramfs-Debug-4176f5a521fa9162848a.json  target-ramfs-Debug-748ea1057fd8791d6c9b.json  target-ramfs-Debug-a1a50c486dfba5a81ca7.json  target-test_applications-Debug-8b90acf19f4e7cf7c0d2.json  target-test_applications-Debug-aaddb84aa33f7457f535.json  target-test_applications-Debug-cc904dca5d302bcc7bff.json  target-test_applications-Debug-e29a408d1823f7a2c72a.json  target-test_block_io-Debug-60ec04c7cc5c66d5dc3b.json  target-test_block_io-Debug-cdfe385a6078fc694c2c.json  target-test_block_io-Debug-ebd26d0c2d2fd6a8822a.json  target-test_block_io-Debug-fbe23e4c745c11fa4f0c.json  target-test_block_manage-Debug-1a09c9347b2aa2272e54.json  target-test_block_manage-Debug-4a8c5334cfe5c17ed66c.json  target-test_block_manage-Debug-7e6dc691a6b02e413568.json  target-test_block_manage-Debug-8adebea3449c38f84688.json  target-test_disk-Debug-0ff9b4c23b8eb9481cbc.json  target-test_disk-Debug-2604c87f656ec1e99396.json  target-test_disk-Debug-4f3e85dd558ae5ebad97.json  (+5 more)
build_vscode/src/: cmake_install.cmake  ramfs
build_vscode/test/: CTestTestfile.cmake  cmake_install.cmake  test_block_io  test_block_manage
include/: applications.hpp  block_io.hpp  block_manage.hpp  definations.hpp  disk.hpp  file_manage.hpp  fs.hpp  ramfs.hpp  terminal_io.hpp
src/: CMakeLists.txt  block_io.cpp  block_manage.cpp  disk.cpp  file_manage.cpp  ramfs.cpp  terminal_io.cpp
test/: CMakeLists.txt  test_applications.cpp  test_block_io.cpp  test_block_manage.cpp  test_disk.cpp  test_file_manage.cpp
